turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: Int does not take parameters
  	for (i<-0 to colors.length()-1) {
                                  ^LangtonsAnt:11: error: Int does not take parameters
    setCouleurBrosse(colors((ind+1)%colors.length()))
                                                 ^